# icfp24

./: Diagram.hs  icfp.cabal  make.sh  references.md
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: Alpaca.json  Diagram.hs  Pattern.lhs  icfp.md  icfp.md~
template/: acmart.aux  acmart.blg  acmart.cls  acmart.glo  acmart.gls  acmart.hd  acmart.idx  acmart.ilg  acmart.ind  acmart.out  acmart.toc  acmguide.aux  acmguide.bbl  acmguide.blg  acmguide.idx  acmguide.out  acmguide.toc  icfp-template.aux  icfp-template.out  icfp-template.tex
template/samples/: sample-acmcp.aux  sample-acmcp.blg  sample-acmcp.out  sample-acmcp.tex  sample-acmengage.aux  sample-acmengage.bbl  sample-acmengage.blg  sample-acmengage.out  sample-acmengage.tex  sample-acmlarge.aux  sample-acmlarge.blg  sample-acmsmall-biblatex.aux  sample-acmsmall-biblatex.bcf  sample-acmsmall-biblatex.out  sample-acmsmall-biblatex.run.xml  sample-acmsmall-conf.aux  sample-acmsmall-conf.blg  sample-acmsmall-submission.aux  sample-acmsmall-submission.blg  sample-acmsmall-submission.tex  sample-acmsmall.blg  sample-acmtog.aux  sample-acmtog.blg  sample-acmtog.out  sample-authordraft.blg
tmp/: icfp-standalone.tex  icfp.md  icfp.tex
